--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@mdi/font": "7.0.96",
     "axios": "^1.6.8",
     "core-js": "^3.34.0",
+    "jwt-decode": "^4.0.0",
     "roboto-fontface": "*",
     "vue": "^3.4.27",
     "vuetify": "^3.5.0"
